bio-seq-derive/tests/fail/non_ascii.rs
use bio_seq::prelude::*;

fn main() {
    let _seq = iupac!("ACNSWGTğŸ¤¬");
    let _seq = dna!("ACGğŸ«£T");
}
