bio-seq-derive/tests/fail/non_ascii.stderr
error: Non-ASCII characters in IUPAC string
 --> tests/fail/non_ascii.rs:4:23
  |
4 |     let _seq = iupac!("ACNSWGTğŸ¤¬");
  |                       ^^^^^^^^^^^

error: Non-ASCII characters in DNA string
 --> tests/fail/non_ascii.rs:5:21
  |
5 |     let _seq = dna!("ACGğŸ«£T");
  |                     ^^^^^^^^
